--- a/app/views/home/documents.html.erb
+++ b/app/views/home/documents.html.erb
@@ -4,409 +4,34 @@
 
 <div class="container mb-5">
   <h1 class="display-4 text-center text-uppercase mt-5 mb-5">Настройка</h1>
-  <div class="d-flex align-items-start">
-    <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-      <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
-      <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
-      <button class="nav-link" id="v-pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#v-pills-disabled" type="button" role="tab" aria-controls="v-pills-disabled" aria-selected="false" disabled>Disabled</button>
-      <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</button>
-      <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</button>
+  <!-- Nav tabs -->
+  <ul class="nav nav-pills nav-fill" id="docTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Основные</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="favorite-tab" data-bs-toggle="tab" data-bs-target="#favorite" type="button" role="tab" aria-controls="favorite" aria-selected="false">Избранное</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="restock-tab" data-bs-toggle="tab" data-bs-target="#restock" type="button" role="tab" aria-controls="restock" aria-selected="false">Сообщить о поступлении</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false">Сообщения</button>
+    </li>
+  </ul>
+  
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+      <section><%= render partial: 'home/main_doc'%></section>
     </div>
-    <div class="tab-content" id="v-pills-tabContent">
-      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="v-pills-disabled" role="tabpanel" aria-labelledby="v-pills-disabled-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">...</div>
-      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">...</div>
+    <div class="tab-pane" id="favorite" role="tabpanel" aria-labelledby="favorite-tab">
+      <section><%= render partial: 'home/favorite_doc'%></section>
+    </div>
+    <div class="tab-pane" id="restock" role="tabpanel" aria-labelledby="restock-tab"> В разработке </div>
+    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+      <section><%= render partial: 'home/message_doc'%></section>
     </div>
   </div>
 </div>
 
-<section class="page-section mb-0">
-  <div class="container">
-
-    <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
-          aria-controls="pills-home" aria-selected="true">Установка из магазина приложений InSales</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-          aria-controls="pills-profile" aria-selected="false">Установка без магазина приложений InSales</a>
-      </li>
-    </ul>
-    <div class="tab-content" id="pills-tabContent">
-      <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-        <h2 class="h3 mt-2">Установка приложения</h2>
-        <ol class="list-group">
-          <li class="list-group-item">
-            Авторизуйтесь в бэк-офисе своего магазина, перейдите в раздел Приложения, затем – Центр приложений, найдите
-            приложение "K-comment" и нажмите кнопку Установить.
-            <br />
-            <img src="1.jpg" />
-          </li>
-        </ol>
-        <h2 class="h3 mt-2">Настройка приложения на примере темы "Стиль"</h2>
-        <ol class="list-group">
-          <li class="list-group-item">
-            Настройка кнопки в карточке товара
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">
-                Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="2.jpg" />
-              </li>
-              <li class="list-group-item">
-                Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product_form.liquid</b>.
-                <br />
-                <img src="3.jpg" />
-                <br />
-                <img src="4.jpg" />
-
-              </li>
-              <li class="list-group-item">
-                В коде найдите строчку
-                <code>
-                    {% unless settings.product_compare_hide %}
-                    </code>
-                <br />
-                <img src="5.jpg" />
-              </li>
-              <li class="list-group-item">После
-                {% endunless %}, вставьте следующий код:
-                <pre>
-
-{% comment %} избранное {% endcomment %}
-&lt;div style="margin-top: 20px" class="izb-control"&gt;
-&lt;button class="js-izb-add" data-izb-add="{{ product.id }}">добавить в избранное&lt;/button&gt;
-&lt;button class="deleteizb js-izb-delete" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" style="display: none;"&gt;удалить из избранного&lt;/button&gt;
-&lt;/div&gt;
-{% comment %} конец избранное {% endcomment %}
-    </pre>
-              </li>
-            </ul>
-
-          </li>
-          <li class="list-group-item">
-            Настройка кнопки в каталоге для товаров.
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="2.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product_card.liquid</b>.
-                <br />
-                <img src="3.jpg" />
-                <br />
-                <img src="11.jpg" />
-
-              </li>
-              <li class="list-group-item">В коде найдите строчку
-                <code>
-                    {% if bundle_component and bundle_component.product.variants.size > 1 %}
-                    </code>.
-                <br />
-                <img src="12_1.jpg" />
-              </li>
-              <li class="list-group-item">После
-                <code>
-                    {% endif %}
-                  </code>
-                вставьте следующий код:
-                <pre>
-
-{%comment%} избранное {%endcomment%}
-&lt;div class="text-right">
- &lt;i title="добавить в избранное" data-izb-add="{{ product.id }}" class="izb-icon js-izb-add fa-heart-o fa">&lt;/i&gt;
-&lt;i title="удалить из избранного" style="display: none;" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-heart fa"&gt;&lt;/i&gt;
-&lt;/div&gt;
-{%comment%} конец избранное {%endcomment%}
-        </pre>
-              </li>
-            </ul>
-          </li>
-          <li class="list-group-item">Настройка страницы для вывода избранных товаров
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Контент</b>,
-                <b>Меню и страницы</b>.
-                <br />
-                <img src="6.jpg" />
-              </li>
-              <li class="list-group-item">Создайте новую страницу в разделе
-                <b>"Нет навигации"</b>
-                <br />
-                <img src="7.jpg" />
-              </li>
-              <li class="list-group-item">Выберете шаблон
-                <code>page.izb.liquid</code>
-                <br />
-                <img src="8.jpg" />
-              </li>
-              <li class="list-group-item">Сохраните страницу</li>
-              <li class="list-group-item">Проверьте, что страница появилась, попробуйте добавить товар в "Избранное". Не
-                забудьте залогинеться, как пользователь на сайте.
-                <br />
-                <img src="9.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите на страницу избранного, если там отображаются товары, то все
-                работает правильно.
-                <br />
-                <img src="10.jpg" />
-              </li>
-              <li class="list-group-item">Добавьте ссылку на страницу Избранного в меню (сверху или снизу).</li>
-            </ul>
-          </li>
-
-          <li>При установке другой темы или копии текущей, в нее нужно скопирвать следующие файлы:
-            <code>k-comment-product.liquid, page.izb.liquid
-              </code>
-          </li>
-        </ol>
-        <h2 class="h3 mt-2">Настройка приложения на примере темы "Fleur"</h2>
-        <ol class="list-group mt-5">
-          <li class="list-group-item">
-            Настройка кнопки в карточке товара
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">
-                Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="18.jpg" />
-              </li>
-              <li class="list-group-item">
-                Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product_info.liquid</b>.
-                <br />
-                <img src="19.jpg" />
-                <br />
-                <img src="20.jpg" />
-              </li>
-              <li class="list-group-item">
-                В коде найдите строчку
-                <code>
-                    {% if account.quick_checkout.enabled %}
-                    </code>
-                и перед этой строчкой вставьте следующий код:
-                <pre>
-
-{%comment%} избранное {%endcomment%}
-&lt;div style="margin-top: 10px;" class="cell- izb-control"&gt;
-&lt;button class="bttn-reg c_button js-izb-add" data-izb-add="{{ product.id }}"&gt;добавить в избранное&lt;/button&gt;
-&lt;button class="deleteizb bttn-reg c_button js-izb-delete" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" style="display: none;"&gt;удалить из избранного&lt;/button&gt;
-&lt;/div&gt;
-{%comment%} конец избранное {%endcomment%}
-        </pre>
-                <br />
-                <img src="20.jpg" />
-              </li>
-            </ul>
-          </li>
-          <li class="list-group-item">
-            Настройка кнопки в каталоге для товаров.
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="18.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product-item.liquid</b>.
-                <br />
-                <img src="19.jpg" />
-                <br />
-                <img src="21.jpg" />
-              </li>
-              <li class="list-group-item">В коде найдите строчку № 75, нажмите ENTER.
-                <br />
-                <img src="22.jpg" />
-              </li>
-              <li class="list-group-item">Вставьте следующий код:
-                <pre>
-
-{%comment%} избранное {%endcomment%}
-&lt;i title="добавить в избранное" data-izb-add="{{ product.id }}" class="izb-icon js-izb-add fa-heart-o fa">&lt;/i&gt;
-&lt;i title="удалить из избранного" style="display: none;" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-heart fa"&gt;&lt;/i&gt;
-{%comment%} конец избранное {%endcomment%}
-      </pre>
-              </li>
-            </ul>
-          </li>
-        </ol>
-      </div>
-      <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-        <h2 class="h3 mt-2">Установка приложения</h2>
-        <ol class="list-group">
-          <li class="list-group-item">
-            Создаем api ключи в своем интернет-магазине
-            <img src="13.jpg" />
-          </li>
-          <li class="list-group-item">
-            Регистрируемся на сайте приложения:
-            <a href="http://k-comment.ru/users/sign_up">http://k-comment.ru</a>
-          </li>
-          <li class="list-group-item">
-            Заходим в ЛК, переходим в "Настройки" - "Общая информация"
-            <br />
-            <img src="14.jpg" />
-          </li>
-          <li class="list-group-item">
-            Нажимаем на кнопку "Добавить интеграцию"
-            <br />
-            <img src="15.jpg" />
-          </li>
-          <li class="list-group-item">
-            Прописываем ранее созданные ключи в личном кабинете приложения и сохраняем.
-            <br />
-            <img src="16.jpg" />
-          </li>
-          <li class="list-group-item">
-            Нажимаем на кнопку "Добавить файлы"
-            <br />
-            <img src="17.jpg" />
-          </li>
-        </ol>
-        <h2 class="h3">Настройка приложения на примере темы "Стиль"</h2>
-        <ol class="list-group">
-          <li class="list-group-item">
-            Настройка кнопки в карточке товара
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="2.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product_form.liquid</b>.
-                <br />
-                <img src="3.jpg" />
-                <br />
-                <img src="4.jpg" />
-              </li>
-              <li class="list-group-item">В коде найдите строчку
-                <code>
-                      {% unless settings.product_compare_hide %}
-                      </code>.
-                <br />
-                <img src="5.jpg" />
-              </li>
-              <li class="list-group-item">После
-                {% endunless %}, вставьте следующий код:
-                <p></p>
-                <pre>
-{%comment%} избранное {%endcomment%}
-<div style="margin-top: 20px" class="izb-control"&gt;
-&lt;button class="js-izb-add" data-izb-add="{{ product.id }}" >добавить в избранное&lt;/button&gt;
-&lt;button class="deleteizb js-izb-delete" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" style="display: none;"&gt;удалить из избранного&lt;/button&gt;
-</div>
-{%comment%} конец избранное {%endcomment%}
-</pre>
-              </li>
-            </ul>
-
-          </li>
-          <li class="list-group-item">
-            Настройка кнопки в каталоге для товаров.
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Дизайн</b>.
-                <br />
-                <img src="2.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите в редактирование установленной темы
-                <b>(Редактор HTML/CSS/JS)</b>
-                и выберите сниппет
-                <b>product_card.liquid</b>.
-                <br />
-                <img src="3.jpg" />
-                <br />
-                <img src="11.jpg" />
-              </li>
-              <li class="list-group-item">В коде найдите строчку
-                <code>
-                      {% if bundle_component and bundle_component.product.variants.size > 1 %}
-                      </code>.
-                <br />
-                <img src="12_1.jpg" />
-              </li>
-              <li class="list-group-item">После
-                <code>
-                      {% endif %}
-                    </code>
-                вставьте следующий код:
-                <pre>
-
-{%comment%} избранное {%endcomment%}
-&lt;div class="text-right">
-&lt;i title="добавить в избранное" data-izb-add="{{ product.id }}" class="izb-icon js-izb-add fa-heart-o fa">&lt;/i&gt;
-&lt;i title="удалить из избранного" style="display: none;" data-favorites-trigger="{{ product.id }}"
-data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-heart fa"&gt;&lt;/i&gt;
-&lt;/div>
-{%comment%} конец избранное {%endcomment%}
-        </pre>
-              </li>
-            </ul>
-          </li>
-          <li class="list-group-item">Настройка страницы для вывода избранных товаров
-            <ul class="mt-3 mb-3 list-group">
-              <li class="list-group-item">Перейдите в раздел
-                <b>Контент</b>,
-                <b>Меню и страницы</b>.
-                <br />
-                <img src="6.jpg" />
-              </li>
-              <li class="list-group-item">Создайте новую страницу в разделе
-                <b>"Нет навигации"</b>
-                <br />
-                <img src="7.jpg" />
-              </li>
-              <li class="list-group-item">Выберете шаблон
-                <code>page.izb.liquid</code>
-                <br />
-                <img src="8.jpg" />
-              </li>
-              <li class="list-group-item">Сохраните страницу</li>
-              <li class="list-group-item">Проверьте, что страница появилась, попробуйте добавить товар в "Избранное". Не
-                забудьте залогинеться, как пользователь на сайте.
-                <br />
-                <img src="9.jpg" />
-              </li>
-              <li class="list-group-item">Перейдите на страницу избранного, если там отображаются товары, то все
-                работает правильно.
-                <br />
-                <img src="10.jpg" />
-              </li>
-              <li class="list-group-item">Добавьте ссылку на страницу Избранного в меню (сверху или снизу).</li>
-            </ul>
-          </li>
-
-          <li class="list-group-item">При установке другой темы или копии текущей, в нее нужно скопирвать следующие
-            файлы:
-            <code>k-comment-product.liquid, page.izb.liquid
-                </code>
-          </li>
-        </ol>
-      </div>
-    </div>
-
-  </div>
-</section>
