--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -15,7 +15,7 @@
   </div>
   <%= search_form_for @search, {class: 'form-inline col-10 pl-0 pr-0'} do |f| %>
     <div class="input-group input-group-sm">
-            <%= f.search_field :title_eq , placeholder: 'title', class: "form-control", style: "max-width: 180px;" %>
+            <%= f.search_field :title_eq , placeholder: 'Название шаблона', class: "form-control", style: "max-width: 180px;" %>
             <%# f.search_field :subject_eq , placeholder: 'subject', class: "form-control", style: "max-width: 180px;" %>
             <%# f.search_field :receiver_eq , placeholder: 'receiver', class: "form-control", style: "max-width: 180px;" %>
             <%# f.search_field :content_eq , placeholder: 'content', class: "form-control", style: "max-width: 180px;" %>
@@ -34,10 +34,10 @@
   <thead>
     <tr class="bg-success">
       <th><%= check_box_tag 'selectAll', 'selectAll'%></th>
-      <th>Title</th>
-      <th>Subject</th>
+      <th>Название шаблона</th>
+      <th>Тема письма</th>
       <th>Получатель</th>
-      <th>Content</th>
+      <th>Содержание письма</th>
       <th colspan="2"></th>
     </tr>
   </thead>
