--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,7 +20,7 @@
             <% else %>
             <%= f.search_field :custom_status_eq , placeholder: 'Статус', class: "form-control", style: "max-width: 180px;" %>
             <% end %>
-            <%= f.select :financial_status_eq, Event::FIN_STATUS, { include_blank: false, prompt: 'Фин Статус'}, class: "form-select", style: "max-width: 180px;" %>
+            <%= f.select :financial_status_eq, Event::FIN_STATUS, { include_blank: false, prompt: 'Статус оплаты'}, class: "form-select", style: "max-width: 180px;" %>
             <%= button_tag(type: 'submit', :class => "btn btn-info") do %>
         <span class="oi oi-magnifying-glass"></span>
       <% end %>
