--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,7 +36,7 @@
       <!-- <th><%# check_box_tag 'selectAll', value: 'selectAll'%></th> -->
       <th>Insid</th>
       <th>Img</th>
-      <th>Title</th>
+      <th>Название</th>
       <th>Variants</th>
       <th>Price</th>
       <th colspan="1"></th>
