--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,9 +15,9 @@
 </div>
 
 <div class="table-responsive">
-<table class="table table-hover table-condensed table-sm">
-  <thead class="thead-light">
-    <tr>
+  <table class="table table-hover table-condensed">
+    <thead>
+      <tr class="bg-success">
       <th>ID</th>
       <th>Создан</th>
       <th>ID INS</th>
