--- a/app/views/order_status_changes/index.html.erb
+++ b/app/views/order_status_changes/index.html.erb
@@ -1,5 +1,5 @@
-<div class="row justify-content-center align-items-center mb-2">
-  <div class="col-3 row">
+<div class="row align-items-center mt-3 mb-3">
+  <div class="col-3">
   <div class="col-md-12 p-0">
     <div class="h3">Изменения статусов заказов  </div>
     <div class="h6">Всего - <%= OrderStatusChange.count %></div>
