--- a/app/views/variants/index.html.erb
+++ b/app/views/variants/index.html.erb
@@ -1,12 +1,12 @@
-<div class="row justify-content-center align-items-center mb-2">
-  <div class="col-2 row">
+<div class="row align-items-center mt-3 mb-3">
+  <div class="col-2">
   <div class="col-md-12 p-0">
     <div class="h3">Variants  </div>
     <div class="h6">Всего - <%= Variant.count %></div>
   </div>
   </div>
   <div class="col-10 pl-0 pr-0 row">
-  <div class="col-12 mb-3">
+  <div class="col-12">
     <div class="btn-group p-0" role="group" aria-label="Button group with nested dropdown">
     <div class="btn-group" role="group">
       <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown">Действия</button>
