--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row mt-3 mb-3">
   <div class="col"><h1>Общая информация</h1></div>
 </div>
-<div class="row mt-3">
+<div class="row mt-3 mb-3">
   <div class="col">
     <p><b>Имя:</b> <%= link_to current_user.name, edit_user_path( current_user )%><small> (subdomain - <%= current_user.subdomain%>)</small></p>
     <p><b>Оплачен до:</b>  <% if !@pay_period.nil?%><%= @pay_period %><%else%>Бесплатно<%end%></p>
