--- a/app/views/event_actions/index.html.erb
+++ b/app/views/event_actions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row justify-content-center align-items-center mb-2">
+<div class="row justify-content-center align-items-center mt-3 mb-3">
   <div class="col-2 row">
   <div class="col-md-12 p-0">
     <div class="h3">Event Actions  </div>
