--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row align-items-center">
+<div class="row align-items-center mt-3 mb-3">
   <div class="col">
     <h2>Счета</h2>
   </div>
@@ -7,9 +7,10 @@
   </div>
   <div class="col"></div>
 </div>
-<table class="table">
-  <thead class="thead-light">
-    <tr>
+<div class="table-responsive">
+  <table class="table table-hover table-condensed">
+  <thead>
+    <tr class="bg-success">
       <th>Номер</th>
       <th>Дата</th>
       <th>Сервис</th>
@@ -37,3 +38,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
