--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -5,7 +5,7 @@
 <meta name="yandex-verification" content="c284690800bdd189" />
 <title>K-comment - это дополнительное приложение для CMS InSales</title>
 <meta name="description" content="K-comment - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Сообщения"/>
-<%= favicon_link_tag asset_path("favicon.png") %>
+<%= favicon_link_tag asset_path("new_icon.png") %>
 <%= stylesheet_link_tag "application", media: "all" %>
 <%= javascript_include_tag "application"%>
 <%= csrf_meta_tags %>
