--- a/app/views/message_setups/index.html.erb
+++ b/app/views/message_setups/index.html.erb
@@ -1,11 +1,11 @@
-<div class="row justify-content-center align-items-center mb-2">
-  <div class="col-2 row">
+<div class="row align-items-center mt-3 mb-3">
+  <div class="col-2">
   <div class="col-md-12 p-0">
     <div class="h3">Message Setups  </div>
   </div>
   </div>
   <div class="col-10 pl-0 pr-0 row">
-  <div class="col-12 mb-3">
+  <div class="col-12">
     <div class="btn-group" role="group">
       <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown">Действия</button>
       <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
