--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="row align-items-center">
+<div class="row align-items-center mt-3 mb-3">
   <div class="col-2"><h2>Платежи</h2></div>
   <div class="col-2"></div>
   <%= search_form_for @search, html: {class: 'form-inline col-3 pl-0 pr-0'}  do |f|%>
