--- a/app/views/order_status_changes/index.html.erb
+++ b/app/views/order_status_changes/index.html.erb
@@ -13,7 +13,7 @@
             <%# f.search_field :event_id_eq , placeholder: 'event_id', class: "form-control", style: "max-width: 180px;" %>
             <%# f.search_field :insales_order_id_eq , placeholder: 'insales_order_id', class: "form-control", style: "max-width: 180px;" %>
             <%= f.search_field :insales_order_number_eq , placeholder: 'Номер заказа', class: "form-control", style: "max-width: 180px;" %>
-            <% if Services::InsalesApi.new(current_user.insints.first).work? %>
+            <% if current_user.insints.present? && Services::InsalesApi.new(current_user.insints.first).work? %>
             <%= f.select :insales_custom_status_title_eq, Services::InsalesApi.new(current_user.insints.first).statuses, {include_blank: false, prompt: 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
             <% else %>
             <%= f.search_field :custom_status_eq , placeholder: 'Статус', class: "form-control", style: "max-width: 180px;" %>
